--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Hello world
+This page is currently under development.<br><br>
+
+If you have any enquiries, please email me <a href="mailto:mrterryhmh@gmail.com">here</a>.
