--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 This page is currently under development.<br><br>
 
-If you have any enquiries, please email me <a href="mailto:mrterryhmh@gmail.com">here</a>.
+If you have any enquiries, please email me <a href="mailto:mrterrymh@gmail.com">here</a>.
