Ready for launch

--- a/index.html
+++ b/index.html
@@ -1,3 +1,44 @@
-This page is currently under development.<br><br>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+		<title>Terry Harvey – Web developer</title>
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/main.css">
+	</head>
 
-If you have any enquiries, please email me <a href="mailto:mrterrymh@gmail.com">here</a>.
+	<body>
+		<header>
+			<img id="logo" src="img/avatar.png" alt="Terry Harvey – Web developer">
+		</header>
+
+		<div class="container">
+			<h1>Terry Harvey <small>Web developer</small></h1>
+
+			<hr>
+
+			<p>
+				I’m a web developer based in the United Kingdom. I specialise in PHP and Javascript.<br>
+
+				I’m a huge fan of modern development. I often use <a href="http://laravel.com" target="_blank">Laravel</a> to speed up my development and I test my code whenever I can.
+			</p>
+
+			<p>
+				I’m also experienced with: LAMP and LEMP stacks, <a href="http://git-scm.com" target="_blank">git</a>, <a href="http://angularjs.org" target="_blank">AngularJS</a>, <a href="http://jquery.com" target="_blank">jQuery</a>, <a href="http://nodejs.org" target="_blank">Node.js</a>, <a href="http://mysql.com" target="_blank">MySQL</a>, <a href="http://postgresql.com" target="_blank">PostgreSQL</a>, <a href="http://memcached.org" target="_blank">memcached</a>, <a href="http://redis.io" target="_blank">Redis</a>, <a href="http://doctrine-project.org" target="_blank">Doctrine</a>, <a href="http://symfony.com" target="_blank">Symfony2</a>, <a href="http://getcomposer.org" target="_blank">Composer</a>, <a href="http://cakephp.org" target="_blank">CakePHP</a>, <a href="http://codeigniter.com" target="_blank">CodeIgniter</a> (is it worth mentioning?) and Ruby.
+			</p>
+
+			<hr>
+
+			<p>
+				<span class="available">I’m currently available for hire.</span><br>
+
+				For a free quote, please click <a href="mailto:mrterrymh@gmail.com">here</a> to send me an email.
+			</p>
+
+			<p>
+				Oh, and if you enjoy stalking people, you can catch me on <a href="http://twitter.com/mrterryh" target="_blank">Twitter</a>.
+			</p>
+		</div>
+	</body>
+</html>
