--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 			<hr>
 
 			<p>
-				I’m a web developer based in the United Kingdom. I specialise in PHP and Javascript.<br>
+				I’m a web developer based in the United Kingdom. I specialise in PHP and Javascript.<br><br>
 
 				I’m a huge fan of modern development. I often use <a href="http://laravel.com" target="_blank">Laravel</a> to speed up my development and I test my code whenever I can.
 			</p>
 
 			<p>
-				I’m also experienced with: LAMP and LEMP stacks, <a href="http://git-scm.com" target="_blank">git</a>, <a href="http://angularjs.org" target="_blank">AngularJS</a>, <a href="http://jquery.com" target="_blank">jQuery</a>, <a href="http://nodejs.org" target="_blank">Node.js</a>, <a href="http://mysql.com" target="_blank">MySQL</a>, <a href="http://postgresql.com" target="_blank">PostgreSQL</a>, <a href="http://memcached.org" target="_blank">memcached</a>, <a href="http://redis.io" target="_blank">Redis</a>, <a href="http://doctrine-project.org" target="_blank">Doctrine</a>, <a href="http://symfony.com" target="_blank">Symfony2</a>, <a href="http://getcomposer.org" target="_blank">Composer</a>, <a href="http://cakephp.org" target="_blank">CakePHP</a>, <a href="http://codeigniter.com" target="_blank">CodeIgniter</a> (is it worth mentioning?) and Ruby.
+				I’m also experienced with: LAMP and LEMP stacks, OOP, TDD, BDD <a href="http://git-scm.com" target="_blank">git</a>, <a href="http://angularjs.org" target="_blank">AngularJS</a>, <a href="http://jquery.com" target="_blank">jQuery</a>, <a href="http://nodejs.org" target="_blank">Node.js</a>, <a href="http://mysql.com" target="_blank">MySQL</a>, <a href="http://postgresql.com" target="_blank">PostgreSQL</a>, <a href="http://memcached.org" target="_blank">memcached</a>, <a href="http://redis.io" target="_blank">Redis</a>, <a href="http://doctrine-project.org" target="_blank">Doctrine</a>, <a href="http://symfony.com" target="_blank">Symfony2</a>, <a href="http://getcomposer.org" target="_blank">Composer</a>, <a href="http://cakephp.org" target="_blank">CakePHP</a>, <a href="http://codeigniter.com" target="_blank">CodeIgniter</a> (is it worth mentioning?) and Ruby.
 			</p>
 
 			<hr>
