Add subject to email link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<p>
 				<span class="available">I’m currently available for hire.</span><br>
 
-				For a free quote, please click <a href="mailto:mrterrymh@gmail.com">here</a> to send me an email.
+				For a free quote, please click <a href="mailto:mrterrymh@gmail.com?subject=Work%20Enquiry">here</a> to send me an email.
 			</p>
 
 			<hr>
