Change wording and add GitHub link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<hr>
 
 			<p>
-				Oh, and if you enjoy stalking people, you can catch me on <a href="http://twitter.com/mrterryh" target="_blank">Twitter</a>.
+				Catch me on <a href="http://twitter.com/mrterryh" target="_blank">Twitter</a> & <a href="http://github.com/mrterryh" target="_blank">GitHub</a>
 			</p>
 		</div>
 	</body>
