Redirect to new site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<title>Terry Harvey – Web developer</title>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/main.css">
+		
+		<script>
+			window.location = 'http://terryharvey.co.uk';
+		</script>
 	</head>
 
 	<body>
